- added fullscreen map as webapp's homepage - HR and dynamic time-in-zone analysis - increased API filtering to last 60 days and simplified the /api/c1/activity-routes endpoint
